More rawgit removal

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title></title>
     <meta charset="utf-8">
     <meta name="author" content="Ben Krajacich" />
-    <link rel="stylesheet" href="https:\\cdn.rawgit.com\benkraj\nih_xaringan\master\nih3.css" type="text/css" />
-    <link rel="stylesheet" href="https:\\cdn.rawgit.com\benkraj\nih_xaringan\master\nih-fonts.css" type="text/css" />
+	<link rel="stylesheet" href="nih.local.css" type="text/css" />
+    <link rel="stylesheet" href="nih-fonts.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
